# MaxCliqueSearchCPP

./: .gitignore  CMakeLists.txt  MaxCliqueSearch  README.md  main.cpp  runTests  test.cpp
include/: BitManipulation.hpp  MaxCliqueSearch.hpp
src/: main.cpp
test/: test.cpp
